--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.2",
+    "redux-persist": "^6.0.0",
     "sass": "^1.57.1"
   },
   "devDependencies": {
