--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.2",
     "redux-persist": "^6.0.0",
-    "sass": "^1.57.1"
+    "sass": "^1.57.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
